2003-09-28  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in ($(SCRIPTS)): Don't set QM_BUILD.
	* qm/__init__.py: Set common.is_installed.
	* qm/common.py (get_share_directory): Don't use QM_BUILD.
	(get_doc_directory): Likewise.
	(is_installed): New variable.
	* qm/diagnostic.py (__diagnostic_set): New variable.
	(__help_set): Likewise.
	(get_diagnostic_set): New function.
	(get_help_set): Likewise.
	(message): Use them.
	(error): Likewise.
	(warning): Likewise.
	(load_messages): Likewise.
	(__initialize_module): Remove.
	(diagnostic_set): Likewise.
	(help_set): Likewise.
	* qm/qm.sh: Eliminate QM_BUILD.
	* qm/web.py (make_help_link): Use diagnostic.get_help_set().
	* qm/test/web/web.py (DefaultDtmlPage.__init__): Don't use
	QM_BUILD.
	* qmdist/command/install_data.py (install_data.run): Simplify.

	* doc/qm-opl.xml: Remove Software Carpentry references.
	* doc/manual/common-manual.xml: Likewise.
	* qm/test/doc/manual.xml: Update version number.

	* qm/test/doc/reference.xml: Remove documentation for non-existant
	--summary and --no-summary options to "qmtest run".  Fix typo in
	-O documentation for "qmtest summarize".  Improve --pid-file
	documentation.

	* qm/test/classes/pickle_result_stream.py
	(PickleResultReader.__init__): Treat cPickle.UnpicklingError like
	EOFError.

	* qm/test/cmdline.py (QMTest.summary_formats): Rearrange order.
	(QMTest.commands_spec): Automatically generate lists of --format
	options.
	* qm/test/classes/text_result_stream.py
	(TextResultStream.arguments): Specify valid enumerals for format.

	* qm/test/cmdline.py (commands_spec): Add --help support for
	"qmtest remote".

2003-09-26  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Kill): Fix typo.

2003-09-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.arguments): Improve
	documentation for exit_code.
	* qm/test/doc/tour.xml: Remove discussion of carriage-returns in
	execution tests.
	