@@ -1,3 +1,8 @@
+2003-09-30  Stefan Seefeld  <seefeld@sympatico.ca>
+
+	* qmdist/command/check.py: New file.
+	* setup.py: Register new check command.
+
 2003-09-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* GNUmakefile.in ($(SCRIPTS)): Don't set QM_BUILD.
